
namespace ProtoBuf
{
    internal static class ProtoFormat
    {
        internal const string
            FIXED32 = "fixed32",
            FIXED64 = "fixed64",
            SFIXED32 = "sfixed32",
            SFIXED64 = "sfixed64",
            INT32 = "int32",
            INT64 = "int64",
            SINT32 = "sint32",
            SINT64 = "sint64",
            UINT32 = "uint32",
            UINT64 = "uint64",
            STRING = "string",
            BOOL = "bool",
            DOUBLE = "double",
            FLOAT = "float",
            BYTES = "bytes";
    }
}
